# imsimseq

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
Tests/: bundle.json
core/: CMakeLists.txt
core/include/ims/: catalogs.hpp  json_adapters.hpp
core/src/: catalogs.cpp
src/: main.cpp
